<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.demo.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    
	<item
        android:id="@+id/atn_direct_enable"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/enable_p2p_button"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/atn_direct_discover"
        android:icon="@drawable/ic_action_discover"
        android:title="@string/discover_peers_button"
        android:showAsAction="ifRoom|withText" />

</menu>
